# caffeine-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SKILL.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  version-bump.yml
config/coding/: .clang-format  .clang-tidy  barr_c.json  coding_rules.txt
scripts/: build-local.sh
tests/: CMakeLists.txt
